[gd_scene load_steps=3 format=3 uid="uid://bjla4dd1mgwmk"]

[ext_resource type="Texture2D" uid="uid://nl4ivm6iq8ie" path="res://assets/833x721.png" id="1_dg6c4"]
[ext_resource type="Script" path="res://scripts/spike.gd" id="1_xbdy8"]

[node name="Spike" type="Node2D"]
script = ExtResource("1_xbdy8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(209, 174, 4, -182, -199, 170)

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(2, -2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_dg6c4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
